2007-04-09  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Parse.pm (split_all_array_with_pos): only push non empty
	values. Improves GNOME bug #420213.

2007-04-08  Carlos Garnacho  <carlosg@gnome.org>

	* Net-DBus/Makefile.am: improve uninstall rules. Suggested by
	Joseph E. Sacco  <jsacco@gnome.org>
	* configure.in: make netdbusdir equal to modulesdir if none is
	specified.
	* HostsConfig.pm: remove print.

2007-04-03  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.2.1

2007-04-03  Carlos Garnacho  <carlosg@gnome.org>

	* Net-DBus/lib/Net/DBus.pm: do not use nonexistent
	Test::MockConnection module, noticed by Carlos Eduardo Rodrigues
	Diógenes <cerdiogenes@yahoo.com.br>

2007-03-12  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.2.0

2007-02-27  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.1.4

2007-02-20  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm: oops, actually be able to configure static
	interfaces in debian...

2007-02-19  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Platform.pm: patch by the Guadalinex people to support
	Guadalinex v4 in s-t-b.

2007-01-10  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.1.3

2007-01-09  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_debian_bootproto) (set_debian_bootproto):
	misc fixes to make extensible config methods work ok.
	(interface_configured): parse correctly bootproto to determine whether
	an interface is configured.

2007-01-08  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_available_configuration_methods): oops,
	elements in mapping table are arrays, not scalars. Definitely add
	ipv4ll support for ubuntu-7.04.

2007-01-04  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.1.2

2007-01-04  Carlos Garnacho  <carlosg@gnome.org>

	* */*.pm: Add support for Ubuntu Feisty, separated from the rest of
	the debian based ones, because there are supposed to be important
	changes.
	* Network/Ifaces.pm (get_available_configuration_methods): add ipv4ll